--- a/gymbro/package.json
+++ b/gymbro/package.json
@@ -11,11 +11,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "repopack": "^0.1.45",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
